# QitCodeHistory

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libcount/: CMakeLists.txt  add.cpp  countutil.h
app/src/main/cpp/libgetndk/: CMakeLists.txt  get1.c  getutil.h
app/src/main/java/com/qitian/c/learning/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qitian/c/learning/: ExampleUnitTest.kt
extra/: getndk.c  getndk.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
